2004-03-31  Mason Kidd  <mrkidd@mrkidd.com>

	* src/gap-metadata.c, src/gap-metadata.h, src/GAPPlayer.c: Add GstTag support (yea!)

2004-03-31  Mason Kidd  <mrkidd@mrkidd.com>

	* open-location.glade, src/gui-callbacks.c: Use the full dialog from the glade file
	instead of creating one.

2004-03-31  Mason Kidd  <mrkidd@mrkidd.com>

	* Makefile.am, pixmaps/Makefile.am, src/Makefile.am, others:  Cleanup the makefiles
	from Anjuta.

2003-11-11  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (SUBDIRS): Remove intl.
	(ACLOCAL_AMFLAGS): New variable.
	(EXTRA_DIST): Add config.rpath.
	* configure.in (AC_OUTPUT): Add m4/Makefile.
	(AM_GNU_GETTEXT_VERSION): Bump to 0.12.1.
